{
    "name": "InputController",
    "maps": [
        {
            "name": "Player Movement",
            "id": "fb0cfa2a-8c06-4851-93ac-af9d730a509b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1e38eb22-8848-4ebb-aad5-a6c27323d91f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "527e5f1c-1ddc-456e-ba92-942b310890cc",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}