{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "playerMovement",
            "id": "fe81b98e-7814-4099-b8a3-1afd8ad027fd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "f2af25d2-b3d8-44e6-8dcf-6a33d912966e",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "6e9997b6-77d9-447f-b48a-70f0459aafc0",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "eaaac3b5-db3f-4dbe-870c-090c2b0135b3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9598e995-97bf-44f7-968c-7fda1df30d8e",
                    "path": "<AndroidJoystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "12207076-91bb-46e2-9248-190ca808939d",
                    "path": "<AndroidJoystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ea335721-2317-4775-a527-3e0a06265b97",
                    "path": "<AndroidJoystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dfaf9cbd-563e-4aba-82ea-222fafeb5927",
                    "path": "<AndroidJoystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "65f981b1-e5b7-4db0-bddb-1d06ed75ff15",
                    "path": "<AndroidJoystick>/stick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}